website/versioned_docs/version-1.1.1/tutorials/quickstart/index.mdx
---
title: Quickstart
sidebar_label: Quickstart
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/quickstart/quickstart.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/quickstart/quickstart.ipynb"
/>

# Quickstart

Ax is an open-source platform for adaptive experimentation, a technique used to
efficiently tune parameters in complex systems. This guide will walk through
installation, core concepts, and basic usage of Ax.

## Installation

We recommend using `pip` to install Ax.

```shell
pip install ax-platform
```

## Core concepts

- **Experiment:** A process of iteratively suggesting and evaluating parameters to
  improve some objective.
- **Parameter:** A variable that can be adjusted -- a collection of these form the space
  we are searching over during the optimization.
- **Objective:** The value being optimized.
- **Trial:** A set of parameters and the associated objective.
- **Client:** An object that manages the experiment and provides methods for interacting
  with it.

```python
from ax import Client, RangeParameterConfig

# 1. Initialize the Client.
client = Client()

# 2. Configure where Ax will search.
client.configure_experiment(
    name="booth_function",
    parameters=[
        RangeParameterConfig(
            name="x1",
            bounds=(-10.0, 10.0),
            parameter_type="float",
        ),
        RangeParameterConfig(
            name="x2",
            bounds=(-10.0, 10.0),
            parameter_type="float",
        ),
    ],
)

# 3. Configure a metric for Ax to target (see other Tutorials for adding constraints,
# multiple objectives, tracking metrics etc.)
client.configure_optimization(objective="-1 * booth")

# 4. Conduct the experiment with 20 trials: get each trial from Ax, evaluate the
# objective function, and log data back to Ax.
for _ in range(20):
    # Use higher value of `max_trials` to run trials in parallel.
    for trial_index, parameters in client.get_next_trials(max_trials=1).items():
        client.complete_trial(
            trial_index=trial_index,
            raw_data={
                "booth": (parameters["x1"] + 2 * parameters["x2"] - 7) ** 2
                + (2 * parameters["x1"] + parameters["x2"] - 5) ** 2
            },
        )

# 5. Obtain the best-performing configuration; the true minimum for the booth
# function is at (1, 3).
client.get_best_parameterization()
```

<CellOutput>
{
`/opt/hostedtoolcache/Python/3.12.11/x64/lib/python3.12/site-packages/pyro/ops/stats.py:527: SyntaxWarning: invalid escape sequence '\g'
  we have :math:ES^{*}(P,Q) \ge ES^{*}(Q,Q) with equality holding if and only if :math:P=Q, i.e.
[INFO 09-05 19:20:06] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol'), GenerationNode(node_name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, model_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')]), GenerationNode(node_name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, model_key_override=None)], transition_criteria=[])]) chosen based on user input and problem structure.
[INFO 09-05 19:20:06] ax.api.client: Generated new trial 0 with parameters {'x1': 0.0, 'x2': 0.0} using GenerationNode CenterOfSearchSpace.
[INFO 09-05 19:20:06] ax.api.client: Trial 0 marked COMPLETED.
[INFO 09-05 19:20:06] ax.api.client: Generated new trial 1 with parameters {'x1': 0.695958, 'x2': -3.846614} using GenerationNode Sobol.
[INFO 09-05 19:20:06] ax.api.client: Trial 1 marked COMPLETED.
[INFO 09-05 19:20:06] ax.api.client: Generated new trial 2 with parameters {'x1': -5.405467, 'x2': 4.126192} using GenerationNode Sobol.
[INFO 09-05 19:20:06] ax.api.client: Trial 2 marked COMPLETED.
[INFO 09-05 19:20:06] ax.api.client: Generated new trial 3 with parameters {'x1': -1.100115, 'x2': -8.545287} using GenerationNode Sobol.
[INFO 09-05 19:20:06] ax.api.client: Trial 3 marked COMPLETED.
[INFO 09-05 19:20:06] ax.api.client: Generated new trial 4 with parameters {'x1': 5.296928, 'x2': 8.168053} using GenerationNode Sobol.
[INFO 09-05 19:20:06] ax.api.client: Trial 4 marked COMPLETED.
[INFO 09-05 19:20:07] ax.api.client: Generated new trial 5 with parameters {'x1': -10.0, 'x2': -0.2048} using GenerationNode MBM.
[INFO 09-05 19:20:07] ax.api.client: Trial 5 marked COMPLETED.
[INFO 09-05 19:20:07] ax.api.client: Generated new trial 6 with parameters {'x1': -2.609826, 'x2': 3.089853} using GenerationNode MBM.
[INFO 09-05 19:20:07] ax.api.client: Trial 6 marked COMPLETED.
[INFO 09-05 19:20:07] ax.api.client: Generated new trial 7 with parameters {'x1': -3.362188, 'x2': 7.848674} using GenerationNode MBM.
[INFO 09-05 19:20:07] ax.api.client: Trial 7 marked COMPLETED.
[INFO 09-05 19:20:08] ax.api.client: Generated new trial 8 with parameters {'x1': 5.382062, 'x2': -1.396575} using GenerationNode MBM.
[INFO 09-05 19:20:08] ax.api.client: Trial 8 marked COMPLETED.
[INFO 09-05 19:20:08] ax.api.client: Generated new trial 9 with parameters {'x1': 2.335303, 'x2': 0.860138} using GenerationNode MBM.
[INFO 09-05 19:20:08] ax.api.client: Trial 9 marked COMPLETED.
[INFO 09-05 19:20:09] ax.api.client: Generated new trial 10 with parameters {'x1': -1.250757, 'x2': 4.857222} using GenerationNode MBM.
[INFO 09-05 19:20:09] ax.api.client: Trial 10 marked COMPLETED.
[INFO 09-05 19:20:09] ax.api.client: Generated new trial 11 with parameters {'x1': 10.0, 'x2': -6.810389} using GenerationNode MBM.
[INFO 09-05 19:20:09] ax.api.client: Trial 11 marked COMPLETED.
[INFO 09-05 19:20:10] ax.api.client: Generated new trial 12 with parameters {'x1': -9.414433, 'x2': 10.0} using GenerationNode MBM.
[INFO 09-05 19:20:10] ax.api.client: Trial 12 marked COMPLETED.
[INFO 09-05 19:20:11] ax.api.client: Generated new trial 13 with parameters {'x1': 10.0, 'x2': -1.808082} using GenerationNode MBM.
[INFO 09-05 19:20:11] ax.api.client: Trial 13 marked COMPLETED.
[INFO 09-05 19:20:11] ax.api.client: Generated new trial 14 with parameters {'x1': 0.229225, 'x2': 2.901108} using GenerationNode MBM.
[INFO 09-05 19:20:11] ax.api.client: Trial 14 marked COMPLETED.
[INFO 09-05 19:20:12] ax.api.client: Generated new trial 15 with parameters {'x1': 3.09018, 'x2': -0.446072} using GenerationNode MBM.
[INFO 09-05 19:20:12] ax.api.client: Trial 15 marked COMPLETED.
[INFO 09-05 19:20:13] ax.api.client: Generated new trial 16 with parameters {'x1': -0.695704, 'x2': 3.960786} using GenerationNode MBM.
[INFO 09-05 19:20:13] ax.api.client: Trial 16 marked COMPLETED.
[INFO 09-05 19:20:13] ax.api.client: Generated new trial 17 with parameters {'x1': 1.167533, 'x2': 2.325201} using GenerationNode MBM.
[INFO 09-05 19:20:13] ax.api.client: Trial 17 marked COMPLETED.
[INFO 09-05 19:20:14] ax.api.client: Generated new trial 18 with parameters {'x1': -0.156716, 'x2': 3.749095} using GenerationNode MBM.
[INFO 09-05 19:20:14] ax.api.client: Trial 18 marked COMPLETED.
[INFO 09-05 19:20:15] ax.api.client: Generated new trial 19 with parameters {'x1': 0.473396, 'x2': 3.004937} using GenerationNode MBM.
[INFO 09-05 19:20:15] ax.api.client: Trial 19 marked COMPLETED.
({'x1': -0.15671616179908338, 'x2': 3.7490954513890675},
 {'booth': (np.float64(4.090898983977695), np.float64(13.821768988241145))},
 18,
 '18_0')`
}
</CellOutput>

